fix broken UI KB categories fullScreen

--- a/web/css/backoffice/knowledge.css
+++ b/web/css/backoffice/knowledge.css
@@ -189,11 +189,10 @@ ul {
 
 .app-navigator.fullscreen header .categories-divider {
   display: block;
-  margin-top: 10px !important;
 }
 
 .app-navigator.fullscreen .categories {
-  top: 50px !important;
+  top: 60px !important;
 }
 
 /****************************************************************************************
